# nostodon

./: .gitignore  Cargo.nix  Cargo.toml  README.md  deploy.sh  docker-compose.yml  flake.nix  sqlx-data.json
.github/workflows/: deploy.yml
migrations/: 20230211141249_add_initial_tables.sql  20230215234257_add_mastodon_servers.sql  20230215234257_add_mastodon_tokens.sql  20230217135538_add_jobs_table.sql  20230221001403_add_nostr_relays.sql
ops/: core-server.nix  linode-base.nix
src/: health.rs  listener.rs  main.rs  mastodon.rs  metrics.rs  nostr.rs  poster.rs  postgres.rs  util.rs
src/postgres/: job_queue.rs  mod.rs  types.rs
src/storage/: mod.rs  postgres.rs
src/util/: url.rs
