[package]
name = "nostodon"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.64"
clap = { version = "4.1.4", features = ["derive", "env"] }
eyre = "0.6.8"
mastodon-async = "1.1.0"
metrics = "0.20.1"
nostr-sdk = "0.17.0"
tokio = { version = "1.25.0", features = ["full"] }
tokio-stream = "0.1.11"
